# forestfire

./: .coverage  .env  .htaccess  .pre-commit-config.yaml  .pylintrc  404.html  Forestfire.ipynb  ORM_README.md  README.md  Working-NB.ipynb  behave.ini  default.html  directory.html  edits.py  index.html  main.py  migrate_to_orm.py  mkdocs.yml  pre-commit-config.yaml  pyproject.toml  pytest.ini  redirect.js  requirements.txt  setup.py  sitemap.xml
api_documentation/: index.html
bdd_testing/: index.html
docs/: api_documentation.md  bdd_testing.md  home.md  orm_guide.md  package_managers.md  python_documentation.md  python_formatters.md  python_logging.md  testing_libraries.md  working.md
features/: environment.py  warehouse_optimization.feature
home/: index.html
mkdocs/: index.html
orm_guide/: index.html
package_managers/: index.html
python_documentation/: index.html
python_formatters/: index.html  redirect.html
python_logging/: index.html
reports/: TESTS-warehouse_optimization.xml
search/: search_index.json
testing_libraries/: index.html
tests/: README.md  __init__.py  conftest.py  test_ant_colony.py  test_batch_service.py  test_config_override.py  test_database_connection.py  test_database_services.py  test_distance_calculator.py  test_fitness.py  test_forestfire.py  test_genetic_algorithm.py  test_graph.py  test_initialization.py  test_integration_bdd.py  test_main.py  test_optimizer.py  test_picklist_repository.py  test_repository_comprehensive.py  test_route_optimizer.py  test_route_optimizer_comprehensive.py  test_routing_comprehensive.py  (+1 more)
(+84 files in other folders)
