[project]
name = "forestfire"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "behave>=1.2.6",
    "colorama>=0.4.6",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "litestar>=2.16.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.13",
    "numpy>=2.2.5",
    "pre-commit>=4.2.0",
    "psycopg2>=2.9.10",
    "pydantic>=2.11.4",
    "pytest-asyncio>=1.0.0",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "ruff>=0.11.8",
]
[tool.ruff]
# Set the maximum line length to 80.
line-length = 80

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set. By default, Ruff omits rules that
# overlap with the use of a formatter, like Black, but we can override this behavior by
# explicitly adding the rule.
extend-select = ["E501"]
